# denyfs

./: Makefile  README  config.status  configure
autoconf/: config.h  config.h.in  configure.ac
doc/: TODO
src/: Makefile.in  denyfs  denyfs.c  denyfs.h
tests/: gen-dfsopencli
tools/: dfsclose  dfsopen  dfstest  dfstouch
